# solzempic

./: .gitignore  Cargo.toml  README.md
solzempic/: CLAUDE.md  Cargo.toml  README.md
solzempic-macros/: CLAUDE.md  Cargo.toml
solzempic-macros/src/: CLAUDE.md  lib.rs
solzempic/src/: CLAUDE.md  account.rs  idl.rs  lib.rs  traits.rs
solzempic/src/programs/: CLAUDE.md  alt.rs  ata.rs  ids.rs  lut.rs  mint.rs  mod.rs  signer.rs  system.rs  sysvars.rs  token_account.rs  token_program.rs  traits.rs  validation.rs  vault.rs
solzempic/src/wrappers/: CLAUDE.md  account_ref.rs  account_ref_mut.rs  mod.rs  shard_ref_context.rs  shard_ref_mut_context.rs  traits.rs
