[package]
name = "solzempic-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Proc macros for Solzempic Solana framework"

[lib]
proc-macro = true

[features]
default = []
shank = []

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
