[package]
name = "solzempic"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Solzempic - Solana instruction framework"

[features]
default = []
shank = ["solzempic-macros/shank"]

[lints]
workspace = true

[dependencies]
pinocchio = { workspace = true }
pinocchio-pubkey = { workspace = true }
bytemuck = { workspace = true }
solzempic-macros = { workspace = true }
solana-address = { workspace = true }
