[package]
name = "solzempic"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Solzempic - Solana instruction framework"

[features]
default = []
std = []
idl = ["std", "dep:inventory"]

[lints]
workspace = true

[dependencies]
pinocchio = { workspace = true }
pinocchio-pubkey = { workspace = true }
bytemuck = { workspace = true }
solzempic-macros = { workspace = true }
solana-address = { workspace = true }
shank = "0.4"
inventory = { version = "0.3", optional = true }
